--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "homepage": "https://github.com/bruhdudeisdead/clematis#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.876.0",
     "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "escape-html": "^1.0.3",
     "express": "^5.1.0",
+    "file-type": "^21.0.0",
     "fs": "^0.0.1-security",
     "htmlspecialchars": "^1.0.5",
     "knex": "^3.1.0",
