--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fs": "^0.0.1-security",
     "htmlspecialchars": "^1.0.5",
     "knex": "^3.1.0",
+    "luxon": "^3.7.1",
     "module-alias": "^2.2.3",
     "moment": "^2.30.1",
     "mysql2": "^3.14.0",
